# rs-covid19gr

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cum.rs  daily.rs  hosp.rs  lib.rs  macros.rs  main.rs  refug.rs
